# portfolio_optimizer_webapp

./: .gitignore  MANIFEST.in  README.md  db.sqlite3  pyproject.toml  setup.cfg  temp-plot.html
config/: settings.py  urls.py
django/config/: settings.py  urls.py
django/optimizer/: download.py  piotroski_fscore.py
django/webface/: download.py  forms.py  models.py  multiforms.py  piotroski_fscore.py  urls.py  views.py
django_backend/: test_data.csv
django_backend/config/: settings.py  urls.py
django_backend/optimizer/: apps.py  download.py  forms.py  models.py  multiforms.py  optimization.py  piotroski_fscore.py  plots.py  prediction.py  serializers.py  urls.py  utils.py  views.py
django_backend/utils/: download.py  piotroski_fscore.py
django_backend/webframe/: apps.py  models.py  views.py
migrations/: 0001_initial.py
optimizer/: download.py  piotroski_fscore.py  utils.py
portfolio_optimizer/: MANIFEST.in  forms.py  index.md  models.py  setup.cfg  urls.py  views.py
portfolio_optimizer/migrations/: 0001_initial.py  0002_datasettings_risk_aversion.py  0002_scores_fiscal_year.py  0002_securitylist_has_fundamentals_and_more.py  0003_rename_has_prices_securitylist_has_securityprice.py  0004_scores_fiscal_year.py  0005_portfolio_year.py
portfolio_optimizer/optimizer/: download.py  optimization.py  piotroski_fscore.py  plots.py  utils.py
portfolio_optimizer/portfolio_optimizer/: apps.py  forms.py  urls.py
portfolio_optimizer/portfolio_optimizer/fixtures/: sp500.csv
portfolio_optimizer/portfolio_optimizer/optimizer/: download.py  optimization.py  utils.py
portfolio_optimizer/portfolio_optimizer/templates/optimizer/: add-data.html  index.html  update-security.html
portfolio_optimizer/portfolio_optimizer/templates/registration/: password_reset_done.html
portfolio_optimizer/templates/: optimizer_navbar.html
portfolio_optimizer/templates/optimizer/: add-data.html  base.html  dashboard.html  index.html  update-security.html
portfolio_optimizer/templates/registration/: login.html  password_reset_complete.html
portfolio_optimizer/webframe/: apps.py  forms.py  models.py  urls.py  views.py
portfolio_optimizer/webframe/migrations/: 0001_initial.py  0003_alter_scores_security.py  0006_delete_dividends.py  0007_fundamentals_remove_financials_security_and_more.py  0008_fundamentals_gross_profit.py  0009_fundamentals_total_revenue.py  0010_rename_total_current_assets_fundamentals_current_assets_and_more.py
portfolio_optimizer/webframe/templates/optimizer/: add-data.html
portfolio_optimizer_webapp/: apps.py  forms.py  models.py  plots.py  urls.py  views.py
portfolio_optimizer_webapp/migrations/: 0001_initial.py  0002_alter_scores_book_value.py  0002_alter_securitylist_business_summary_and_more.py  0002_alter_securitylist_last_updated.py  0002_fundamentals_enterprise_value_and_more.py  0003_alter_fundamentals_enterprises_value_ebitda_ratio_and_more.py  0003_alter_securitylist_last_updated.py  0003_securityprice_dividends_securityprice_splits_and_more.py  0004_alter_securityprice_close_alter_securityprice_date_and_more.py  0004_fundamentals_accruals_fundamentals_cash_and_more.py  0004_securitylist_name.py  0005_alter_securityprice_splits_and_more.py  0005_remove_fundamentals_accruals_and_more.py  0006_alter_scores_table.py  0006_alter_securityprice_adjclose_and_more.py  0007_expectedreturns.py  0008_alter_expectedreturns_variance.py  0009_alter_scores_accruals_alter_scores_cash_ratio_and_more.py  0010_remove_portfolio_fiscal_year_remove_portfolio_id_and_more.py  0011_alter_portfolio_fundamentals.py  0012_expectedreturns_symbol_portfolio_symbol_and_more.py  0013_alter_portfolio_symbol.py  (+4 more)
webframe/: forms.py  models.py  views.py
(+76 files in other folders)
