[tool.poetry]
name = "portfolio-optimizer-webapp"
version = "0.1.0"
description = ""
authors = ["Nick Fournier <nichfournier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
Django = "^5.0.6"
pandas = "^2.2.2"
plotly = "^5.22.0"
markdown = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
