[tool.poetry]
name = "portfolio-optimizer-webapp"
version = "0.1.6"
description = ""
authors = ["Nick Fournier <nichfournier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
