[project]
name = "portfolio-optimizer-webapp"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nick-fournier", email = "nichfournier@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2.18",
    "markdown>=3.7",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.21.0",
]

[project.scripts]
portfolio-optimizer-webapp = "portfolio_optimizer_webapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
