[metadata]
name = portfolio_optimizer
version = 0.1
description = A Django app to filter stocks and optimize a portfolio.
long_description = file: README.rst
url = NA
author = Nicholas Fournier
author_email = nichfournier@gmail.com
license = GNU-GPL
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
	Django>=4.1
	django-crispy-forms==1.14.0
    django-cors-headers>=3.13.0
    django-rest-framework>=0.1.0
	pandas>=1.5
	PyYAML==6.0
    plotly>=5.11.0
    progressbar==2.5
    pyportfolioopt==1.5.4
    scikit-learn==1.2.0
	whitenoise==6.3.0
    yfinance==0.2.3
